base-installer (1.79) UNRELEASED; urgency=low

  * Remove last references to 2.4 kernels.

 -- Frans Pop <fjp@debian.org>  Wed, 11 Apr 2007 16:56:09 +0200

base-installer (1.78) unstable; urgency=low

  * Multiply menu-item-numbers by 100

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:28:45 -0400

base-installer (1.77) unstable; urgency=low

  * Remove compatibility support for old versions of initramfs-tools.
  * Remove support for initrd-tools.
  * Also install extra kernel-related packages if no initrd is used. This
    seems to be a minir error in the original implementation of this option.
  * Remove distinction between initrd and initramfs: all supported initrds are
    now initramfs. Keep the more generic name initrd.
    Three architectures currently don't use an initrd: mips, mipsel and m68k.
  * Kernel selection: remove support for pre-2.6 kernel images; update
    testsuite accordingly and bring it in line with kernel images as shipped
    with Etch.
  * i386 kernel selection: 686 kernel flavor is usable with AMD k7 processors.

  [ Updated translations ]
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম)
  * Dzongkha (dz.po) by translator
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Frans Pop <fjp@debian.org>  Tue, 10 Apr 2007 00:34:52 +0200

base-installer (1.76) unstable; urgency=low

  * Improve detection of Centaurhauls VIA processors. Only the later models
    (Nehemiah and Esther) support the 686 kernel flavor; the older models
    (Samuel and Ezra) need the 486 flavor. Closes: #414192.

 -- Frans Pop <fjp@debian.org>  Mon, 12 Mar 2007 14:45:30 +0100

base-installer (1.75) unstable; urgency=low

  * Set Aptitude::CmdLine::Ignore-Trust-Violations in allow_unauthenticated
    mode. Seems that aptitude needs two options for some reason.
    Closes: #411927
