@@ -1,12 +1,0 @@
-Processor	: StrongARM-110 rev 2 (v4l)
-BogoMIPS	: 134.75
-Features	: swp 26bit fastmult
-CPU implementer	: 0x44
-CPU architecture: 4
-CPU variant	: 0x0
-CPU part	: 0xa10
-CPU revision	: 2
-
-Hardware	: Acorn-RiscPC
-Revision	: 0000
-Serial		: 0000000000000000
