@@ -1,17 +1,0 @@
-subarch rpc
-cpuinfo rpc.cpuinfo
-majors 2.6
-flavour rpc
-kernel-2.6 linux-image-2.6-rpc
-usable \
-  linux-image-2.6-rpc \
-  linux-image-2.6.18-4-rpc
-unusable \
-  linux-image-2.6-iop32x \
-  linux-image-2.6-ixp4xx \
-  linux-image-2.6-netwinder \
-  linux-image-2.6-s3c2410 \
-  linux-image-2.6.18-4-iop32x \
-  linux-image-2.6.18-4-ixp4xx \
-  linux-image-2.6.18-4-netwinder \
-  linux-image-2.6.18-4-s3c2410
