@@ -1,6 +1,11 @@
 base-installer (1.79) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Remove last references to 2.4 kernels.
+
+  [ Martin Michlmayr ]
+  * Remove RiscPC references since this platform is no longer
+    supported.
 
  -- Frans Pop <fjp@debian.org>  Wed, 11 Apr 2007 16:56:09 +0200
 
